<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2018 Hermann Krumrey <hermann@krumreyh.com>

This file is part of fussballtipp-android.

fussballtipp-android is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

fussballtipp-android is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with fussballtipp-android.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Fussball-Tipp</string>

    <string name="login_screen_title">Login</string>
    <string name="login_screen_username">Username</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_remember_me">Remember Me?</string>
    <string name="login_screen_button_title">Login</string>
    <string name="login_screen_logo_description">The Logo of the App</string>
    <string name="login_error_title">Login Failed</string>
    <string name="login_error_body">Wrong username or password</string>
    <string name="no_account_button_title">No Account?</string>

    <string name="bets_title">Match Plan</string>
    <string name="bets_submit_button">Set bets</string>

    <string name="bet_home_edit_hint">Text Field for the home team bet</string>
    <string name="bet_home_team_flag_description">The home team flag</string>
    <string name="bet_away_team_flag_description">The away team flag</string>
    <string name="bet_away_edit_hint">Text Field for the away team bet</string>
</resources>
