<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2018 Hermann Krumrey <hermann@krumreyh.com>

This file is part of fussballtipp-android.

fussballtipp-android is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

fussballtipp-android is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with fussballtipp-android.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_screen"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/login_screen_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/login_screen_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_screen_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_title"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:textSize="40sp"/>

            <EditText
                android:id="@+id/login_screen_username"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_username"
                android:gravity="center"
                android:inputType="text"/>

            <EditText
                android:id="@+id/login_screen_password"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_screen_password"
                android:gravity="center"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/login_screen_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/login_screen_remember_me"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="fill_parent">

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:id="@+id/login_screen_register_button"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account_button_title"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    />

                <Button
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:id="@+id/login_screen_button"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login_screen_button_title"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/login_screen_logo_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/login_screen_card">

        <ImageView
            android:id="@+id/login_screen_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:contentDescription="@string/login_screen_logo_description" />

    </FrameLayout>
</RelativeLayout>
