<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2018 Hermann Krumrey <hermann@krumreyh.com>

This file is part of fussballtipp-android.

fussballtipp-android is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

fussballtipp-android is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with fussballtipp-android.  If not, see <http://www.gnu.org/licenses/>.
-->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bet_home_edit_hint"
                android:id="@+id/bet_home_team_edit"
                android:digits="0123456789"
                android:inputType="numberDecimal" />

        </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:id="@+id/bet_home_team_title"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/logo"
            android:id="@+id/bet_home_team_flag"
            android:contentDescription="@string/bet_home_team_flag_description" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/logo"
            android:id="@+id/bet_away_team_flag"
            android:contentDescription="@string/bet_away_team_flag_description" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/bet_away_team_title"
            android:text=""/>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/bet_away_edit_hint"
                android:id="@+id/bet_away_team_edit"
                android:digits="0123456789"
                android:inputType="numberDecimal" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>